--- a/ChessSystem/ChessSystem/Web.config
+++ b/ChessSystem/ChessSystem/Web.config
@@ -25,6 +25,10 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
+    <customErrors mode="On" defaultRedirect="~/Errors">
+      <error redirect="~/Errors/AccessDenied" statusCode="403" />
+      <error redirect="~/Errors/NotFound" statusCode="404" />
+    </customErrors>
   </system.web>
   <system.webServer>
     <modules>
