--- a/ChessSystem/ChessSystem/ChessSystem.csproj
+++ b/ChessSystem/ChessSystem/ChessSystem.csproj
@@ -338,6 +338,7 @@
     <Content Include="Views\Users\EditProfile.cshtml" />
     <Content Include="Views\Users\DeleteProfile.cshtml" />
     <Content Include="Views\Users\Register.cshtml" />
+    <Content Include="Views\Tournaments\AddParticipation.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
