Dodane przegladanie uzytkownikow i gier

--- a/ChessSystem/ChessSystem/ChessSystem.csproj
+++ b/ChessSystem/ChessSystem/ChessSystem.csproj
@@ -197,6 +197,7 @@
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="Controllers\GamesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PlayersController.cs" />
     <Compile Include="Controllers\TournamentsController.cs" />
@@ -226,10 +227,13 @@
     <Compile Include="Models\Moves.cs">
       <DependentUpon>DatabaseModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\MovesHelper.cs" />
     <Compile Include="Models\Players.cs">
       <DependentUpon>DatabaseModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\TournamentNameHelper.cs" />
     <Compile Include="Models\TournamentsHelper.cs" />
+    <Compile Include="Models\UsersHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\sp_helpdiagramdefinition_Result.cs">
       <DependentUpon>DatabaseModel.tt</DependentUpon>
@@ -325,9 +329,15 @@
     <Content Include="Views\Tournaments\Tournament.cshtml" />
     <Content Include="Views\Players\Index.cshtml" />
     <Content Include="Views\Players\Player.cshtml" />
+    <Content Include="Views\Games\Index.cshtml" />
+    <Content Include="Views\Games\Game.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\MovesHelper\" />
+    <Folder Include="Views\PlayersHelper\" />
+    <Folder Include="Views\TournamentName\" />
+    <Folder Include="Views\UsersHelper\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
