--- a/ChessSystem/ChessSystem/Web.config
+++ b/ChessSystem/ChessSystem/Web.config
@@ -25,7 +25,7 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
-    <customErrors mode="Off" defaultRedirect="~/Errors">
+    <customErrors mode="On" defaultRedirect="~/Errors">
       <error redirect="~/Errors/AccessDenied" statusCode="403" />
       <error redirect="~/Errors/NotFound" statusCode="404" />
     </customErrors>
